syntax = 'proto3';

package auth.policy;

option go_package = "github.com/ducketlab/auth/pkg/policy";

import "github.com/ducketlab/mingo/cmd/protoc-gen-go-ext/extension/tag/tag.proto";

import "pkg/policy/pb/enum.proto";
import "pkg/user/pb/types.proto";
import "pkg/namespace/pb/namespace.proto";
import "pkg/role/pb/role.proto";

message Policy {
  string id = 1[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
  ];
  int64 create_at = 2[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
  ];
  int64 update_at = 3[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at"'}
  ];
  string domain = 4[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"domain" json:"domain"'}
  ];
  string creater = 5[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"creater" json:"creater"'}
  ];
  user.UserType user_type = 6[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"user_type" json:"user_type"'}
  ];
  string namespace_id = 7[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"namespace_id" json:"namespace_id"'}
  ];
  string account = 8[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"account" json:"account"'}
  ];
  string role_id = 9[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"role_id" json:"role_id"'}
  ];
  string scope = 10[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"scope" json:"scope"'}
  ];
  int64 expired_time = 11[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"expired_time" json:"expired_time"'}
  ];
  PolicyType type = 12[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
  ];
  role.Role role = 13[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"role,omitempty"'}
  ];
  namespace.Namespace namespace = 14[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"namespace,omitempty"'}
  ];
}

message Set {
  int64 total = 1[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
  ];
  repeated Policy items = 2[
    (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
  ];
}