syntax = 'proto3';

package auth.policy;

option go_package = "github.com/ducketlab/auth/pkg/policy";

import "github.com/ducketlab/mingo/cmd/protoc-gen-go-ext/extension/tag/tag.proto";

import "pkg/policy/pb/request.proto";
import "pkg/policy/pb/policy.proto";

service PolicyService {
  rpc CreatePolicy(CreatePolicyRequest) returns(Policy);
  rpc DescribePolicy(DescribePolicyRequest) returns(Policy);
  rpc DeletePolicy(DeletePolicyRequest) returns(Policy);
}